* Author: Mike FABIAN <mfabian@redhat.com>
* 14 May 2018 Released 1.5.37 version
* Update translations from Zanata (pl and uk updated)
* Make “Add direct input” option work correctly when “Remember last preedit input method” option is off
* Fix test case for Korean
* Rewrite setup UI completely in Python, without using Glade
* Fix format string in debug message when a dictionary .aff file has no encoding (Resolves: rhbz#1575659)
* Return False in read_training_data_from_file() if file cannot be opened

* Author: Mike FABIAN <mfabian@redhat.com>
* 10 Apr 2018 Released 1.5.36 version
* Make the default for self.show_status_info_in_auxiliary_text False (Resolves: rhbz#1564354)
* Adapt hunspell_suggest.py to work with pyhunspell 0.5.4

* Author: Mike FABIAN <mfabian@redhat.com>
* 07 Mar 2018 Released 1.5.35 version
* Update translations from zanata (es, pl and uk updated)
* Update UnicodeData.txt to UnicodeData-11.0.0d13.txt
* Read also the emoji names from the emoji-test.txt file
* Update Unicode emoji data to a prerelease of Unicode Emoji Data 11.0
* Fix PyGTKDeprecationWarning: Using positional arguments with the GObject constructor has been deprecated.
* Add “Twemoji” as a good colour emoji font to the emoji-picker font list
* Don’t show the languages en_001 and  es_419 in the browsing treeview
* Use romaji=True by default in EmojiMatcher
* Update emoji annotations from CLDR

* Author: Mike FABIAN <mfabian@redhat.com>
* 04 Oct 2017 Released 1.5.34 version
* Update translations from zanata (cs new, de updated)
* Add some tooltips
* Add an option whether to use pango font fallback to emoji-picker
* Update emoji annotations from CLDR

* Author: Mike FABIAN <mfabian@redhat.com>
* 11 Sep 2017 Released 1.5.33 version
* Update translations from zanata (es new)
* Install appstream metadata to /usr/share/metainfo/
* Update UnicodeData.txt to Unicode 10.0.0
* Update emoji annotations from CLDR